<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_wallet"
        android:icon="@mipmap/ic_wallet"
        android:title="@string/my_wallet" />
    <item
        android:id="@+id/item_reward"
        android:icon="@mipmap/ic_reward"
        android:title="@string/reward" />
    <item
        android:id="@+id/item_collect"
        android:icon="@mipmap/ic_collect"
        android:title="@string/my_collect" />
    <item
        android:id="@+id/item_task"
        android:icon="@mipmap/ic_task"
        android:title="@string/task" />
    <item
        android:id="@+id/item_browsing_history"
        android:icon="@mipmap/ic_browsing_history"
        android:title="@string/browsing_history" />
    <item
        android:id="@+id/item_setting"
        android:icon="@mipmap/ic_setting"
        android:title="@string/setting" />
</menu>