<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="?attr/colorPrimary"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_user_avatar"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_user_avatar"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/iv_user_avatar"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/nickname"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_constellation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_nickname"
        android:layout_below="@id/tv_nickname"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/constellation"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/iv_user_avatar"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/introduce"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp" />
</RelativeLayout>